make embiggen-tooltip fixed position, big z-index.

--- a/tutorial/styles.css
+++ b/tutorial/styles.css
@@ -237,7 +237,8 @@ center img {
 }
 
 #embiggen-tooltip {
-  position: absolute;
+  z-index: 5000;
+  position: fixed;
   top: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.8);
